--- a/client/index.html
+++ b/client/index.html
@@ -75,7 +75,7 @@
 
       </md-sidenav>
 
-      <main flex layout="row" layout-align="start" ui-view  class="md-padding" style="background-color:white; border:solid thin green"></main>
+      <main flex layout="row" layout-align="start" ui-view  class="md-padding" style="background-color:white;"></main>
 
       <footer ng-show="currentUser"  hide-gt-xs layout layout-align="space-around center"  class="md-padding template_footer">
         <!-- to keep the menu item to the right it should appear last -->
