--- a/client/index.html
+++ b/client/index.html
@@ -146,6 +146,7 @@
 <script src="confirms/confirmationController.js"></script>
 <script src="issue-reports/issueReportController.js"></script>
 <script src="dashboard/dashboardController.js"></script>
+<script src="dashboard/dashboardService.js"></script>
 <script src="js/services/updateService.js"></script>
 <script src="confirms/confirmationService.js"></script>
 <script src="downloads/downloadService.js"></script>
