--- a/client/confirms/confirm-install.html
+++ b/client/confirms/confirm-install.html
@@ -4,19 +4,9 @@
     <div  flex-xs="100" layout="column" layout-align="center center" class="md-padding"
           style="margin: 5px 0; background-color: whitesmoke; border: solid thin whitesmoke; border-radius: 5px;">
       <div ng-if="msgStatus == 0">
-        <form layout="column" name="confirmationForm" ng-submit="confirm(update.id)">
-
-          <md-input-container>
-
-            <label>Release Date</label>
-            <md-select ng-model="update.id" required>
-              <md-option ng-repeat="d in updates" value="{{d.id}}">{{d.state+"  "}}{{d.releaseDate | date:short}}</md-option>
-            </md-select>
-
-          </md-input-container>
-
+        <form layout="column" name="confirmationForm" ng-submit="confirm()">
           <div layout layout-align="center start" style="margin: 1rem;">
-            <md-button class="md-raised md-primary" type="submit" ng-disabled="confirmationForm.$invalid"  style="color:white; width: 250px; height:40px">Submit</md-button>
+            <md-button class="md-raised md-primary" type="submit"  style="color:white; width: 250px; height:40px">Confirm Installation </md-button>
           </div>
         </form>
       </div>
