--- a/client/issue-reports/issue-report.html
+++ b/client/issue-reports/issue-report.html
@@ -5,26 +5,22 @@
     <div  flex-xs="100" layout="column" layout-align="center center" class="md-padding"
           style="margin: 5px 0; background-color: whitesmoke; border: solid thin whitesmoke; border-radius: 5px;">
       <div ng-if="msgStatus == 0">
-        <form layout="column" name="reportIssueForm" ng-submit="report(update.version,update.issue,comments)">
+        <form layout="column" name="reportIssueForm"
+              ng-submit="report(update.issue,issue.comments)">
           <md-input-container style="margin: 1rem 0;">
-            <p class="md-caption" style="color:#950B02"><i>*</i> Please select a reason and version.</p>
             <label>I am unable to...</label>
             <md-select ng-model="update.issue" required>
               <md-option ng-repeat="issue in issueType" value="{{issue}}">{{issue}}</md-option>
             </md-select>
           </md-input-container>
-          <md-input-container>
-
-            <label>Release Date</label>
-            <md-select ng-model="update.releaseDate" required>
-              <md-option ng-repeat="d in updates" value="{{d.releaseDate}}">{{d.releaseDate |date:long}}</md-option>
-            </md-select>
-          </md-input-container>
           <div layout layout-align="center">
-            <textarea flex="100" ng-model="comments" name="comments" id="comments" cols="50" rows="4" style="border-radius: 2%; border: solid thin lightgray;"></textarea>
+                <textarea flex="100" ng-model="issue.comments" name="comments" id="comments" cols="32" rows="4"
+                          style="border-radius: 2%; border: solid thin lightgray;"></textarea>
           </div>
           <div layout layout-align="center start" style="margin: 1rem;">
-            <md-button class="md-raised md-primary" type="submit" ng-disabled="reportIssueForm.$invalid" style="color:white; width: 250px; height:40px">Submit</md-button>
+            <md-button class="md-raised md-primary" type="submit" ng-disabled="reportIssueForm.$invalid"
+                       style="color:white; width:200px; height:40px; margin: 1rem;">Submit
+            </md-button>
           </div>
         </form>
       </div>
