--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -46,13 +46,13 @@
                     </md-card-title-text>
                   </md-card-title>
                   <md-card-content>
-                    <canvas ng-if="chart==1" id="base2" class="chart chart-bar"
+                    <canvas ng-if="chart==1" id="base2" class="chart-horizontal-bar"
                             chart-legend="true" chart-data="TXGroupData" chart-labels="TXGroupLabels">
                     </canvas>
-                    <canvas ng-if="chart==2" id="base3" class="chart chart-bar"
+                    <canvas ng-if="chart==2" id="base3" class="chart-horizontal-bar"
                             chart-legend="true" chart-data="KYGroupData" chart-labels="KYGroupLabels">
                     </canvas>
-                    <canvas ng-if="chart==3" id="base4" class="chart chart-bar"
+                    <canvas ng-if="chart==3" id="base4" class="chart-horizontal-bar"
                             chart-legend="true" chart-data="MSGroupData" chart-labels="MSGroupLabels">
                     </canvas>
                   </md-card-content>
