--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<div flex layout="column" class="container">
+<div flex layout="column" layout-align="center"  class="container">
   <div flex>
     <div ng-show="msgShow" ng-class="{info : statusCurrent, warning : !statusCurrent}" layout layout-align="center center" style="padding:.5rem;">
       <div layout layout-align="center center">
@@ -13,80 +13,64 @@
 
     </div>
   </div>
-  <div flex-xs="100" layout="row" layout-xs="column" layout-align="start" layout-align-xs="start center" class="md-padding" style="margin-bottom: 2rem;">
-    <div flex="70" hide-xs layout="column" layout-align="start" style="margin-top: 4rem; border:solid thin #eeeeee; background-color:rgba(233, 233, 233, 0.2);">
-      <div flex="85">
-        <div layout="column">
-          <div flex>
-            <div flex="80" layout="column">
-              <md-card class="md-padding">
-                <md-card-title>
-                  <md-card-title-text>
-                    <h5 class="md-title">Company-Wide</h5>
-                    <h6 class="md-subhead">Installation Percentages</h6>
-                  </md-card-title-text>
-                </md-card-title>
-                <md-card-content>
-                  <canvas  id="base" class="chart-horizontal-bar"
+  <div flex-xs="100" layout="row" layout-xs="column"  layout-align-xs="start center" class="md-padding" style="min-height:900px; margin-bottom: 2rem;">
+    <div flex style="margin-top: 4rem; border:solid thin #eeeeee; background-color:rgba(233, 233, 233, 0.2);">
+      <div flex layout>
+        <div flex layout="column">
+
+            <div  layout="column" class="md-padding">
+              <div layout="column" class="card md-padding" md-whiteframe="1">
+                <div layout layout-align="space-around">
+                  <a href="#" class="md-body-1" ng-click="chart=0">Company Wide</a>
+                  <a href="#" class="md-body-1" ng-click="chart=1">Texas</a>
+                  <a href="#" class="md-body-1" ng-click="chart=2">Kentucky </a>
+                  <a href="#" class="md-body-1" ng-click="chart=3">Mississippi</a>
+                </div>
+                <div>
+                  <p ng-if="chart==0"class="md-title">Company-Wide</p>
+                  <p ng-if="chart==0"class="md-subhead">Installation Percentages</p>
+                  <p ng-if="chart!=0"class="md-title">State-Wide</p>
+                  <p ng-if="chart!=0"class="md-subhead">By Group Percentages</p>
+                </div>
+                <div>
+                  <canvas ng-if="chart==0" id="bar" class="chart-horizontal-bar"
                            chart-legend="true" chart-data="data" chart-labels="labels">
                   </canvas>
-                </md-card-content>
-              </md-card>
-              <div flex layout="column" class="md-padding">
-                <md-card class="md-padding">
-                  <md-card-header layout layout-align="space-around">
-                    <a href="#" class="md-body-1" ng-click="chart=1">Texas</a>
-                    <a href="#" class="md-body-1" ng-click="chart=2">Kentucky</a>
-                    <a href="#" class="md-body-1" ng-click="chart=3">Mississippi</a>
-                  </md-card-header>
-                  <md-card-title>
-                    <md-card-title-text>
-                      <h5 class="md-title">State-Wide</h5>
-                      <h6 class="md-subhead">By Group Percentages</h6>
-                    </md-card-title-text>
-                  </md-card-title>
-                  <md-card-content>
-                    <canvas ng-if="chart==1" id="base2" class="chart-horizontal-bar"
-                            chart-legend="true" chart-data="TXGroupData" chart-labels="TXGroupLabels">
-                    </canvas>
-                    <canvas ng-if="chart==2" id="base3" class="chart-horizontal-bar"
-                            chart-legend="true" chart-data="KYGroupData" chart-labels="KYGroupLabels">
-                    </canvas>
-                    <canvas ng-if="chart==3" id="base4" class="chart-horizontal-bar"
-                            chart-legend="true" chart-data="MSGroupData" chart-labels="MSGroupLabels">
-                    </canvas>
-                  </md-card-content>
-                  <md-card-footer layout layout-align="center start">
-                    <span ng-if="chart==1" class="md-body-1"><i>TEXAS GROUPS</i></span>
-                    <span ng-if="chart==2" class="md-body-1"><i>KENTUCKY GROUPS</i></span>
-                    <span ng-if="chart==3" class="md-body-1"><i>MISSISSIPPI GROUPS</i></span>
-                  </md-card-footer>
-                </md-card>
+                  <canvas ng-if="chart==1" id="base2" class="chart-horizontal-bar"
+                          chart-legend="true" chart-data="TXGroupData" chart-labels="TXGroupLabels">
+                  </canvas>
+                  <canvas ng-if="chart==2" id="base3" class="chart-horizontal-bar"
+                          chart-legend="true" chart-data="KYGroupData" chart-labels="KYGroupLabels">
+                  </canvas>
+                  <canvas ng-if="chart==3" id="base4" class="chart-horizontal-bar"
+                          chart-legend="true" chart-data="MSGroupData" chart-labels="MSGroupLabels">
+                  </canvas>
+                </div>
+                <div layout layout-align="center start">
+                  <span ng-if="chart==1" class="md-body-1"><i>TEXAS GROUPS</i></span>
+                  <span ng-if="chart==2" class="md-body-1"><i>KENTUCKY GROUPS</i></span>
+                  <span ng-if="chart==3" class="md-body-1"><i>MISSISSIPPI GROUPS</i></span>
+                </div>
               </div>
             </div>
-          </div>
         </div>
       </div>
     </div ><!--End of section-->
-    <div flex="30" layout="column" layout-align="start end" style="margin: 4rem;">
+    <div flex="30" layout="column" layout-align="start end" style="margin:4rem 2rem;">
       <div ng-controller="ConfirmationController" flex-xs="100" layout="column">
         <div layout layout-align="start">
           <div layout="column" style="margin-bottom: 4rem;">
-            <h6 class="md-subhead title">Confirm Update</h6>
-            <div flex-xs="100" layout="column" layout-align="center center"
-                 style="background-color: whitesmoke;" class="md-padding" >
-              <div ng-if="msgStatus == 0">
-                <form layout="column" name="confirmationForm" ng-submit="confirm()">
-                  <div layout layout-align="center start" style="margin: 1rem;">
-                    <md-button class="md-raised md-primary" ng-disabled="statusCurrent" type="submit"
-                               style="color:white; width: 200px; height:40px">Confirm Installation
-                    </md-button>
-                  </div>
-                </form>
-              </div>
-              <div ng-if="msgStatus==1">
-                <p>{{ confirmation }}</p>
-              </div>
+            <div ng-if="msgStatus == 0">
+              <form layout="column" name="confirmationForm" ng-submit="confirm()">
+                <div layout layout-align="center start" style="margin: 1rem;">
+                  <md-button class="md-raised md-primary" ng-disabled="statusCurrent" type="submit"
+                             style="color:white; width: 200px; height:40px">Confirm Installation
+                  </md-button>
+                </div>
+              </form>
+            </div>
+            <div ng-if="msgStatus==1">
+              <p>{{ confirmation }}</p>
             </div>
           </div>
         </div>
@@ -96,8 +80,8 @@
           <div flex-xs="100">
             <div layout=column>
               <h6 class="md-subhead title" >Issue Tracker</h6>
-              <div flex flex-xs="100" layout="column" layout-align="center center" class="md-padding"
-                   style="background-color: whitesmoke; border: none;">
+              <div flex-xs="100" layout="column" layout-align="center center" class="md-padding"
+                   style="background-color: whitesmoke;">
 
                 <div ng-if="msgStatus == 0" style="margin:1.8rem;">
                   <form layout="column" name="reportIssueForm"
@@ -131,85 +115,88 @@
       </div>
     </div><!--End of section -->
   </div>
-  <div layout="column" layout-align="center">
-    <div layout layout-align="center" class="md-padding" style="background-color: #0f6ab4">
-      <span class="md-title" style="color:white;">Results Table</span>
-    </div>
-    <md-divider></md-divider>
-    <div flex="95" class="md-padding">
-      <div>
-        <div layout layout-align="space-around start">
-          <!--<form name="qselector">
-            <md-input>
-              <input type="text" id="q-input" ng-model="searchCriteria" placeholder="filter by name, state, group"/>
-            </md-input>
-          </form>-->
-          <div layout layout-align="center center">
-            <span class="md-body-2" style="margin-right:.8rem;">Filter By State</span>
-            <md-select ng-model="searchCriteria" aria-label="states">
-              <md-option ng-repeat="state in states" value="{{ state }}" >{{ state }}</md-option>
-            </md-select>
-          </div>
-          <div layout layout-align="center center">
-            <span class="md-body-2" style="margin-right:.8rem;">Filter By Group</span>
-            <md-select ng-model="searchCriteria" aria-label="groups">
-              <md-option ng-repeat="group in groups" value="{{ group }}" >{{ group }}</md-option>
-            </md-select>
-            <div><a href="#" class="" style="margin: 1rem;">Send Reminder</a></div>
+  <div flex layout="column" layout-align="center" style="min-height: 550px;">
+    <div flex layout="column" >
+      <div layout layout-align="center" class="md-padding" style="background-color: #0f6ab4">
+        <span class="md-title" style="color:white;">Results Table</span>
+      </div>
+
+      <div  layout="column" class="md-padding">
+        <div>
+          <div flex layout style="border: solid thin red;">
           </div>
 
+            <div flex="25" layout layout-align="center center" style="border: solid thin red;">
+              <span class="md-body-2" style="margin-right:.8rem;">Filter By State</span>
+              <md-select ng-model="searchCriteria" aria-label="states">
+                <md-option ng-repeat="state in states" value="{{ state }}" >{{ state }}</md-option>
+              </md-select>
+            </div>
+            <div flex="25" layout layout-align="center center" style="border: solid thin red;">
+              <span class="md-body-2" style="margin-right:.8rem;">Filter By Group</span>
+              <md-select ng-model="searchCriteria" aria-label="groups">
+                <md-option ng-repeat="group in groups" value="{{ group }}" >{{ group }}</md-option>
+              </md-select>
+            </div>
+              <div flex="25" layout layout-align="center center" style="border: solid thin red;">
+                <md-button class="md-info">Clear Filter</md-button>
+                <md-button class="md-warn">Email Reminder</md-button>
+              </div>
+
+
+          </div>
+
+          <md-tabs md-dynamic-height>
+            <md-tab label="Unconfirmed">
+              <div style="overflow: auto; max-height: 200px">
+                <table>
+                  <thead fix-head>
+                  <tr>
+                    <th class="md-body-2">Name</th>
+                    <th class="md-body-2">State</th>
+                    <th class="md-body-2">Group</th>
+                    <th class="md-body-2">Reminder</th>
+                  </tr>
+                  </thead>
+                  <tbody flex>
+                  <tr ng-repeat="e in employeesWithoutConfirmations | orderBy: 'lname' | filter:searchCriteria">
+
+                    <td class="md-body-1"> {{ e.lname}}, {{e.fname}}</td>
+                    <td class="md-body-1">{{ e.state.title }}</td>
+                    <td class="md-body-1">{{ e.group.title }}</td>
+                    <td><a href="#" class="md-body-1"><i class="material-icons">mail_outline</i></a></td>
+                  </tr>
+                  </tbody>
+                </table>
+              </div>
+            </md-tab>
+            <md-tab label="Confirmed">
+              <md-content>
+                <table flex>
+                  <thead flex>
+
+                  <th class="md-body-2">Name</th>
+                  <th class="md-body-2">State</th>
+                  <th class="md-body-2">Group</th>
+                  </thead>
+
+                  <tr ng-repeat="e in employeesWithConfirmations | orderBy: 'lname' | filter:searchCriteria">
+
+                    <td class="md-body-1"> {{ e.lname}}, {{e.fname}}</td>
+                    <td class="md-body-1">{{ e.state.title }}</td>
+                    <td class="md-body-1">{{ e.group.title }}</td>
+
+                  </tr>
+                </table>
+
+              </md-content>
+            </md-tab>
+          </md-tabs>
 
         </div>
 
-        <md-tabs md-dynamic-height>
-          <md-tab label="Unconfirmed">
-            <div style="overflow: auto; max-height: 200px">
-              <table>
-                <thead fix-head>
-                <tr>
-                  <th class="md-body-2">Name</th>
-                  <th class="md-body-2">State</th>
-                  <th class="md-body-2">Group</th>
-                  <th class="md-body-2">Reminder</th>
-                </tr>
-                </thead>
-                <tbody flex>
-                <tr ng-repeat="e in employeesWithoutConfirmations | orderBy: 'lname' | filter:searchCriteria">
-
-                  <td class="md-body-1"> {{ e.lname}}, {{e.fname}}</td>
-                  <td class="md-body-1">{{ e.state.title }}</td>
-                  <td class="md-body-1">{{ e.group.title }}</td>
-                  <td><a href="#" class="md-body-1">Send</a></td>
-                </tr>
-                </tbody>
-              </table>
-            </div>
-          </md-tab>
-          <md-tab label="Confirmed">
-            <md-content>
-              <table flex>
-                <thead flex>
-
-                  <th class="md-body-2">Name</th>
-                  <th class="md-body-2">State</th>
-                  <th class="md-body-2">Group</th>
-                </thead>
-
-                <tr ng-repeat="e in employeesWithConfirmations | orderBy: 'lname' | filter:searchCriteria">
-
-                  <td class="md-body-1"> {{ e.lname}}, {{e.fname}}</td>
-                  <td class="md-body-1">{{ e.state.title }}</td>
-                  <td class="md-body-1">{{ e.group.title }}</td>
-
-                </tr>
-              </table>
-
-            </md-content>
-          </md-tab>
-        </md-tabs>
-
       </div>
-
     </div>
   </div>
 </div>
+
